--- a/odoo-custom-addons/taurus/views/loading.xml
+++ b/odoo-custom-addons/taurus/views/loading.xml
@@ -45,6 +45,18 @@
 <!--            </field>-->
 <!--        </record>-->
 
+        <record id="view_picking_form_stock_taurus" model="ir.ui.view">
+            <field name="name">stock.picking.form.taurus</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="kin_loading.view_picking_throughput_form"/>
+            <field name="arch" type="xml">
+                 <field name="product_id" position="before">
+                     <field name="nnpc_ppmc_no" attrs="{'invisible': [('parent.partner_id.is_nnpc_ppmc', '!=', False)]}"  />
+                     <field name="nnpc_retail_no" attrs="{'invisible': [('parent.partner_id.is_nnpc_retail', '!=', False)]}"  />
+                 </field>
+            </field>
+        </record>
+
 
          <record id="purchase_request_form_extend_taurus" model="ir.ui.view">
             <field name="name">purchase.request.form.extend</field>
@@ -85,6 +97,10 @@
                 </field>
                 <field name="vat" position="after" >
                     <field name="manager" />
+                </field>
+                <field name="industry_id" position="after" >
+                    <field name="is_nnpc_ppmc" />
+                    <field name="is_nnpc_retail" />
                 </field>
             </field>
          </record>
