--- a/odoo-custom-addons/wifiber/views/ticket_view.xml
+++ b/odoo-custom-addons/wifiber/views/ticket_view.xml
@@ -10,6 +10,11 @@
         <menuitem name="Material Issued (Used) Report" id="menu_issued_report" action="action_issued_report_wizard"
           parent="menu_wifiber_report" sequence="3"    />
 
+         <menuitem name="Material Request Report" id="menu_material_report_stock_wifiber" action="action_material_report_wizard"
+          parent="stock.menu_warehouse_report" sequence="2"     />
+        <menuitem name="Material Issued (Used) Report" id="menu_issued_report_stock_wifiber" action="action_issued_report_wizard"
+          parent="stock.menu_warehouse_report" sequence="3"    />
+
         <!-- helps us to execute a server code when a menu is clicked-->
         <record model="ir.actions.server" id="action_view_quants_wifiber"> <!-- Menu + python -->
         <field name="name">Inventory Wifiber Server Action</field>
@@ -47,8 +52,9 @@
                 </xpath>
 
                 <button name="btn_ticket_done" position="after" >
-                    <button name="btn_ticket_finalized" type="object"  string="Finalize"  class="oe_highlight" groups="wifiber.group_helpdesk_finalized_ticket"  attrs="{'invisible': ['|',('category_code', 'not in', ('installation','support') ),('state', 'not in', ('done') )]}"   />
+                    <button name="btn_ticket_finalized" type="object"  string="Finalize"  class="oe_highlight" groups="wifiber.group_helpdesk_finalized_ticket"  attrs="{'invisible': ['|',('category_code', 'not in', ('installation','support','change_request') ),('state', 'not in', ('done') )]}"   />
                     <button name="%(action_disapprove_finalized)d" type="action" states="done,finalized"  string="Reject" groups="wifiber.group_helpdesk_finalized_ticket"  />
+                     <button name="btn_ticket_close_call_log" type="object"  string="Close Call Log"  class="oe_highlight" groups="wifiber.group_helpdesk_close_call_log" attrs="{'invisible': ['|',('category_code', 'not in', ('call_log') ),('state', 'in', ('closed') )]}"   />   />
                 </button>
                 <button name="btn_ticket_done" position="attributes" >
                       <attribute  name="states" >progress,installed</attribute>
@@ -60,7 +66,7 @@
 
                 <button name="btn_ticket_progress" position="after" >
                      <button name="btn_ticket_installed" type="object"  string="Installed"  class="oe_highlight" attrs="{'invisible': ['|',('category_code', 'not in', ('installation','support')),('state', 'not in', ('progress') )]}"    />
-
+                    <button name="btn_ticket_re_populate_materials" type="object"  string="Re-populate Materials Requested"   attrs="{'invisible': [('category_code', 'not in', ('installation','support'))]}" groups="wifiber.group_helpdesk_re_populate_materials"    />
                 </button>
                  <button name="btn_ticket_progress" position="attributes" >
                       <attribute  name="states" >maint_approve,new</attribute>
@@ -81,15 +87,12 @@
                     <attribute name="statusbar_visible" >draft,new,progress,done,finalized,closed</attribute>
                 </field>
 
-
-
                 <field name="partner_id" position="after" >
                      <field name="assigned_eng_user_ids" invisible="1" />
                 </field>
                  <field name="user_id" position="attributes" >
                      <attribute name="invisible" >1</attribute>
                  </field>
-
 
                  <page  name="description" position="attributes" >
                      <attribute name="string" >Details</attribute>
@@ -135,7 +138,6 @@
                       <field name="user_intg_ticket_group_id" options="{'no_open': True, 'no_create': True}" readonly="1" />
                      <field name="initiator_ticket_group_id" options="{'no_open': True, 'no_create': True}" required="1" readonly="1" />
                  </field>
-
 
                  <field name="user_ticket_group_id" position="attributes" >
                     <attribute name="required" >1</attribute>
@@ -207,8 +209,6 @@
                             </group>
                     </page>
 
-
-
                     <page string="Activation Form" attrs="{'invisible': [('category_code', '!=', 'installation' )]}" >
                         <group col="4" >
                             <field name="description" />
@@ -248,7 +248,6 @@
                     </page>
 
                     <page  string="Support Form" attrs="{'invisible': [('category_code', '!=', 'support' )]}" >
-
                             <group col="4" >
                                 <field name="description" />
                                  <field name="source_support" attrs="{'readonly': [('state', 'in', ('closed'))], 'required': [('category_code', '=', 'support' )]}"   />
@@ -281,10 +280,8 @@
                              <group col="4" >
                                  <field name="description" />
                                  <field name="crm_id" readonly="1" />
-
-
                                  <field name="dist_fpop" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
-                                 <field name="fpop_box_jb" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
+                                 <field name="fpop_box_jb" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
                                 <field name="installation_constraint" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))], 'required': [('category_code', '=', 'survey' ),('state', 'not in', ('draft','new','maint_approve') )]}" />
                                    <field name="access_confirmation" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
                                    <field name="comment_survey" attrs="{'readonly': [('state', 'in', ('finalized', 'closed'))]}" />
