--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -219,7 +219,7 @@
                  </button>
 
                  <button name="action_cancel"  position="before" >
-                     <button name="action_atl_approval" states="atl_awaiting_approval" context="{'show_sale': True}"  string="Approve ATL" class="btn-primary" type="object" groups="kin_loading.group_show_approve_atl"   />
+                     <button name="action_atl_approval" states="atl_awaiting_approval" context="{'show_sale': True}"  string="Authorize Release / ATL" class="btn-primary" type="object" groups="kin_loading.group_show_approve_atl"   />
                      <button name="action_submit_quote" states="draft,sent" context="{'show_sale': True}"  string="Submit" class="btn-primary" type="object" groups="kin_loading.group_show_submit_sale_to_manager"   />
                      <button name="action_submit_to_manager" states="quote_submitted" context="{'show_sale': True}"  string="Confirm Sales Order" class="btn-primary" type="object" groups="kin_loading.group_show_confirm_sale_order"   />
                       <button name="action_confirm_main_sale" states="so_to_approve" context="{'show_sale': True}"  string="Approve Sales Order" class="btn-primary" type="object" groups="kin_loading.group_show_confirm_main_sale"   />
@@ -1050,7 +1050,7 @@
             <field name="inherit_id" ref="account.view_move_form" />
             <field name="arch" type="xml">
                 <button name="button_draft" position="after" >
-                    <button name="action_atl_approval" attrs="{'invisible': [('is_atl_approved', '=', True)]}"  string="Approve ATL" class="btn-primary" type="object" groups="kin_loading.group_show_approve_atl_invoice"   />
+                    <button name="action_atl_approval" attrs="{'invisible': ['|',('is_atl_approved', '=', True),('is_advance_invoice','=',False)]}"  string="Authorize Release / ATL" class="btn-primary" type="object" groups="kin_loading.group_show_approve_atl_invoice"   />
                 </button>
                  <group id="other_tab_group" position="inside">
                     <group string="Depot Info." id="sale_info" >
@@ -2708,6 +2708,20 @@ f
 
             </field>
         </record>
+
+     <record model="ir.ui.view" id="view_stock_quant_tree_extend_loading">
+        <field name="name">stock.quant.tree.extend.loading</field>
+        <field name="model">stock.quant</field>
+        <field eval="10" name="priority"/>
+        <field name="inherit_id" ref="stock.view_stock_quant_tree" />
+        <field name="arch" type="xml">
+                <field name="available_quantity" position="attributes" >
+                    <!-- not needed. seems to be confusing -->
+                      <attribute name="invisible" >1</attribute>
+                </field>
+        </field>
+        </record>
+
 
 
 
