--- a/odoo-custom-addons/wifiber/wizard/material_report_wizard_view.xml
+++ b/odoo-custom-addons/wifiber/wizard/material_report_wizard_view.xml
@@ -10,6 +10,7 @@
                          <group col="4" colspan="4" >
                              <field name="start_date" />
                              <field name="end_date" />
+                              <field name="category_id" options="{'no_create': True, 'no_open': True}"  required="1" />
                              <field name="company_id" readonly="1" />
                          </group>
                         <footer>
